# dy-volumes-cleanup

./: .dockerignore  .env-devel  Dockerfile  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
ci/: install_rclone.bash
dy_volumes_cleanup/: _docker.py  _s3.py  cli.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_docker.py  test_s3.py
