[tool.poetry]
name = "dy-volumes-cleanup"
version = "0.1.0"
description = ""
authors = ["Andrei Neagu <neagu@itis.swiss>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}
pydantic = "^1.10.2"
aiodocker = "^0.21.0"
tenacity = "^8.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
aioboto3 = "^10.1.0"
pylint = "^2.15.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dyvc = "dy_volumes_cleanup.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.pylint.messages_control]

max-line-length = 88

disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "too-many-arguments",
  "missing-class-docstring",
]